add etherpad day 2

--- a/index.html
+++ b/index.html
@@ -254,8 +254,13 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 <hr/>
 
 <p id="etherpad">
-  <strong>Etherpad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
+  <strong>Etherpad day 1:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
   <br/>
+    <strong>Etherpad day 2:</strong> <a href="http://pad.software-carpentry.org/FRB_Instructor_Training_Day2">
+  http://pad.software-carpentry.org/FRB_Instructor_Training_Day2</a>.
+  <br/>
+  
+  
   We will use this Etherpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
 {% endif %}
